# Campus-Cloud

./: .env.example  .gitignore  README.md  _db_query.py  openapi.json  package-lock.json  resource_ssh_ls.py
backend/: .env.ai.pve_advisor.example  .env.ai.template_recommendation  .env.ai.template_recommendation.example  BACKEND_FUTURE.md  README.md  pyproject.toml  test_import_app_main.py
backend/app/: exceptions.py  main.py
backend/app/ai/: system_config.py
backend/app/ai/pve_advisor/: __init__.py  config.py  prompt.py  recommendation_service.py  router.py  schemas.py
backend/app/ai/pve_log/: chat.py  config.py
backend/app/ai/teacher_judge/: config.py
backend/app/ai/template_recommendation/: OPTIMIZATION_GUIDE.md  __init__.py  catalog_service.py  config.py  node_service.py  prompt.py  recommendation_service.py  router.py  schemas.py
backend/app/ai_api/: config.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 55989c510c6c_add_api_key_name_to_aiapirequest.py  (+27 more)
backend/app/api/: main.py
backend/app/core/: authorizers.py  config.py  db.py  metrics.py  permissions.py  proxmox.py  redis.py  request_context.py
backend/app/crud/: audit_log.py  spec_change_request.py
backend/app/domain/: __init__.py
backend/app/features/: __init__.py
backend/app/infrastructure/: __init__.py
backend/app/models/: __init__.py  ai_api_credential.py  ai_api_rate_limit.py  ai_api_request.py  ai_api_usage.py  ai_template_call_log.py  audit_log.py  batch_provision.py  cloudflare_config.py  deletion_request.py  gateway_config.py  ip_allocation.py  proxmox_config.py  proxmox_node.py  proxmox_storage.py  resource.py  reverse_proxy_rule.py  script_deploy_log.py  spec_change_request.py  subnet_config.py  tunnel_proxy.py  user.py  vm_request.py
backend/app/repositories/: __init__.py  audit_log.py  batch_provision.py  cloudflare_config.py  group.py  proxmox_config.py  proxmox_node.py  proxmox_storage.py  resource.py  reverse_proxy.py  spec_change_request.py  tunnel_proxy.py  user.py  vm_migration_job.py  vm_request.py
backend/app/schemas/: __init__.py  ai_api.py  ai_monitoring.py  ai_proxy.py  audit_log.py  cloudflare.py  common.py  deletion_request.py  firewall.py  gateway.py  gpu.py  group.py  ip_management.py  jobs.py  proxmox_config.py  resource.py  reverse_proxy.py  rubric.py  script_deploy.py  spec_change_request.py  user.py  vm_request.py
backend/app/services/: ai_api_service.py  audit_service.py  auth_service.py  batch_provision_service.py  firewall_service.py  provisioning_service.py  proxmox_service.py  redis_rate_limiter.py  resource_service.py  rubric_parser.py  rubric_service.py  script_deploy_service.py  snapshot_service.py  spec_change_service.py  user_service.py  vm_request_availability_service.py  vm_request_placement_service.py  vm_request_schedule_service.py  vm_request_service.py
backend/app/utils/: hostname.py
backend/config/: system-ai.json
backend/tests/: conftest.py  test_ai_api.py  test_ai_api_usage.py  test_backend_workflows.py  test_health_check.py  test_metrics.py  test_permissions.py  test_proxmox_client.py  test_request_context.py  test_security_crypto.py
backend/tests/crud/: test_user.py
backend/tests/domain/: test_placement_scorer.py
backend/tests/services/: test_cloudflare_service.py  test_firewall_helpers.py  test_gateway_service.py  test_network_helpers.py  test_redis_rate_limiter.py  test_reverse_proxy_service.py
backend/tests/utils/: item.py  user.py
(+1014 files in other folders)
